added play/pause buttons

--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
 					<div id="#artwork">
 						<img src="media/the-daily-dose-mix.jpg" width="56px" height="56px">
 					</div>
-					<div id="play-pause"></div>
+					<div id="play-pause"> <img src="photoshop/pause-button.png"> <img src="photoshop/pause-button.png"> </div>
 					<div id="song-info"></div>
 					<div id="seeker"></div>
 					<div id="volume"> <img src="photoshop/volume-white.png"> </div>
