--- a/home.html
+++ b/home.html
@@ -7,8 +7,11 @@
 		<link rel="stylesheet" type="text/css" href="home.css">
 		<script src="jquery-2.1.4.js" type="text/javascript"></script>
 		<script src="home.js" type="text/javascript"></script>
+
+		<!-- below two script tags load the font-family hobo-std -->
 		<script src="https://use.typekit.net/hos0uvk.js"></script>
 		<script>try{Typekit.load({ async: true });}catch(e){}</script>
+		<!-- finished loading hobo-std -->
 	</head>
 
 	<body>
@@ -16,10 +19,8 @@
 
 			<div id="media-bar">
 				<div id="media-bar-wrapper">
-					<div id="#artwork">
-						<img src="media/the-daily-dose-mix.jpg" width="56px" height="56px">
-					</div>
-					<div id="play-pause"> <img src="photoshop/pause-button.png"> <img src="photoshop/pause-button.png"> </div>
+					<div id="#artwork"></div>
+					<div id="play-pause"> <img src="photoshop/play-button.png"> <img src="photoshop/pause-button.png"> </div>
 					<div id="song-info"></div>
 					<div id="seeker"></div>
 					<div id="volume"> <img src="photoshop/volume-white.png"> </div>
@@ -31,7 +32,7 @@
 
 			<div id="center">
 					<div id="center-div-wrapper">
-						<img src="photoshop/1train-logo-clean.png">
+						<img id-"logo" src="photoshop/1train-logo-clean.png">
 						<div id="links-div">
 							<div class="links"><a>music</a></div>
 							<div class="links"> | </div>
