--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta char="utf-8">
 		<title>1train.</title>
 		<link rel="stylesheet" type="text/css" href="index.css">
+		<script src="https://connect.soundcloud.com/sdk/sdk-3.0.0.js"></script>
 		<script src="jquery-2.1.4.js" type="text/javascript"></script>
 		<script src='page-viewer.js' type="text/javascript"></script>
 		<!--<script src='blank.js' type="text/javascript"></script>-->
@@ -30,6 +31,7 @@
 			</div>
 
 			<div id="main-content"></div>
+			<div id="player"></div>
 
 	</body>
 </html>
