--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<script src="https://connect.soundcloud.com/sdk/sdk-3.0.0.js"></script>
 		<script src="jquery-2.1.4.js" type="text/javascript"></script>
 		<script src='page-viewer.js' type="text/javascript"></script>
-		<script src='uploadToDB.js' type="text/javascript"></script>
+		<!--<script src='uploadToDB.js' type="text/javascript"></script>-->
 		<!--<script src='blank.js' type="text/javascript"></script>-->
 		<!-- below two script tags load the font-family hobo-std -->
 		<script src="https://use.typekit.net/hos0uvk.js"></script>
