--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 	<head>
 		<meta char="utf-8">
 		<title>1train.</title>
-		<link rel="stylesheet" type="text/css" href="index.css">
-		<script src="https://connect.soundcloud.com/sdk/sdk-3.0.0.js"></script>
 		<script src="jquery-2.1.4.js" type="text/javascript"></script>
+		<script src="https://connect.soundcloud.com/sdk/sdk-3.0.0.js"></script>
 		<script src='page-viewer.js' type="text/javascript"></script>
+	
 		<!--<script src='uploadToDB.js' type="text/javascript"></script>-->
 		<!--<script src='blank.js' type="text/javascript"></script>-->
 		<!-- below two script tags load the font-family hobo-std -->
 		<script src="https://use.typekit.net/hos0uvk.js"></script>
 		<script>try{Typekit.load({ async: true });}catch(e){}</script>
 		<!-- finished loading hobo-std -->
+		<link rel="stylesheet" type="text/css" href="index.css">
 	</head>
 
 	<body>
@@ -24,7 +25,7 @@
 					<div id="play-pause"> <img id="play-button" src="photoshop/play-button.png"> <img id="pause-button" src="photoshop/pause-button.png"> </div>
 					<div id="song-info"></div>
 					<div id="seeker"></div>
-					<div id="volume"> <img src="photoshop/volume-white.png"> </div>
+					<div id="volume"> <img id="loud" src="photoshop/volume-white.png"> <img id="muted" src="photoshop/volume-white-muted.png"></div>
 					<div id="reading-list"> <img src="photoshop/reading-list-white.png"> </div>
 					<div id="video-queue"> <img src="photoshop/watch-list-white.png"> </div>
 					<div id="song-queue"> <img src="photoshop/song-queue-white-red.png"> </div>
