--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<script src="jquery-2.1.4.js" type="text/javascript"></script>
 		<script src="https://connect.soundcloud.com/sdk/sdk-3.0.0.js"></script>
 		<script src='page-viewer.js' type="text/javascript"></script>
-	
+
 		<!--<script src='uploadToDB.js' type="text/javascript"></script>-->
 		<!--<script src='blank.js' type="text/javascript"></script>-->
 		<!-- below two script tags load the font-family hobo-std -->
@@ -29,6 +29,7 @@
 					<div id="reading-list"> <img src="photoshop/reading-list-white.png"> </div>
 					<div id="video-queue"> <img src="photoshop/watch-list-white.png"> </div>
 					<div id="song-queue"> <img src="photoshop/song-queue-white-red.png"> </div>
+					<img id="logo" src="photoshop/1train-logo-clean.png">
 				</div>
 			</div>
 
